Implement signed media URLs
